名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <title>名刺一覧</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.svg">
 </head>
 <body>
     <h1>デザインした名刺の一覧</h1>
     <section class="name-cards">
-        <img src="images/name-card-design1.png" alt="名刺">
+        <div class="img-wrapper">
+            <img src="images/name-card-design1.png" alt="名刺1">
+        </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design2.png" alt="名刺2">
+        </div>
     </section>
 </body>
 </html>
