名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="img-wrapper">
             <img src="images/name-card-design2.png" alt="名刺2">
         </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design3.png" alt="名刺3">
+        </div>
     </section>
 </body>
 </html>
