名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>名刺一覧</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/destyle.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/favicon.svg">
 </head>
 <body>
@@ -17,6 +18,9 @@
         </div>
         <div class="img-wrapper">
             <img src="images/name-card-design3.png" alt="名刺3">
+        </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design4.png" alt="名刺4">
         </div>
     </section>
 </body>
