名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="img-wrapper">
             <img src="images/name-card-design4.png" alt="名刺4">
         </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design5.png" alt="名刺5">
+        </div>
     </section>
 </body>
 </html>
