名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="img-wrapper">
             <img src="images/name-card-design5.png" alt="名刺5">
         </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design6.png" alt="名刺6">
+        </div>
     </section>
 </body>
 </html>
