名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <div class="img-wrapper">
             <img src="images/name-card-design6.png" alt="名刺6">
         </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design7.png" alt="名刺7">
+        </div>
     </section>
 </body>
 </html>
