名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div class="img-wrapper">
             <img src="images/name-card-design7.png" alt="名刺7">
         </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design8.png" alt="名刺8">
+        </div>
     </section>
 </body>
 </html>
