名刺を追加した。

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <div class="img-wrapper">
             <img src="images/name-card-design8.png" alt="名刺8">
         </div>
+        <div class="img-wrapper">
+            <img src="images/name-card-design9.png" alt="名刺9">
+        </div>
     </section>
 </body>
 </html>
